--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 .gitattributes  export-ignore
 .gitignore      export-ignore
 Ignore/* export-ignore
+Ignore export-ignore
 
 # Exclude a file: .gitignore      export-ignore
 # Exclude a whole folder: MyFolder/**   export-ignore
